--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@supabase/supabase-js": "^2.44.4",
     "cache-manager-redis-yet": "^5.1.3",
     "ioredis": "^5.4.1",
     "kafkajs": "^2.2.4",
