--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "kafkajs": "^2.2.4",
     "kill-port": "^2.0.1",
     "pg": "^8.12.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "redis": "^4.6.15",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
